--- a/index.html
+++ b/index.html
@@ -12,40 +12,51 @@
 
 <body>
 
-  <main class="wrapper">
+<main class="wrapper">
 
-    <header class="hero">
-      <img src="/img/avatar.jpg" alt="Serat.avi" class="avatar">
-      <h1>Serat.avi</h1>
-      <p class="subtitle">Watch Out!</p>
-    </header>
+  <header class="hero">
+    <img src="/img/avatar.jpg" alt="Serat.avi" class="avatar">
+    <h1>Serat.avi</h1>
+    <p class="subtitle">Watch Out!</p>
+  </header>
 
-    <section class="link-section">
-      <img src="/img/toro1.png" class="toro toro-left">
-      <a href="#" class="link glass">
-        <i class="fa-brands fa-spotify"></i>
-        Spotify
-      </a>
-    </section>
+  <section class="link-section left">
+    <img src="/img/toro1.png" class="toro">
+    <a href="#" class="link glass">
+      <i class="fa-brands fa-spotify"></i> Spotify
+    </a>
+  </section>
 
-    <section class="link-section">
-      <img src="/img/toro2.png" class="toro toro-left">
-      <a href="#" class="link glass">
-        <i class="fa-brands fa-instagram"></i>
-        Instagram
-      </a>
-    </section>
+  <section class="link-section right">
+    <img src="/img/toro2.png" class="toro">
+    <a href="#" class="link glass">
+      <i class="fa-brands fa-soundcloud"></i> SoundCloud
+    </a>
+  </section>
 
-    <section class="link-section">
-      <img src="/img/toro3.png" class="toro toro-left">
-      <a href="#" class="link glass">
-        <i class="fa-brands fa-youtube"></i>
-        YouTube
-      </a>
-    </section>
+  <section class="link-section left">
+    <img src="/img/toro3.png" class="toro">
+    <a href="#" class="link glass">
+      <i class="fa-brands fa-apple"></i> Apple Music
+    </a>
+  </section>
 
-  </main>
+  <section class="link-section right">
+    <img src="/img/toro4.png" class="toro">
+    <a href="#" class="link glass">
+      <i class="fa-brands fa-youtube"></i> YouTube
+    </a>
+  </section>
 
-  <script src="js/scroll.js"></script>
+  <section class="link-section left">
+    <img src="/img/toro5.png" class="toro">
+    <a href="#" class="link glass">
+      <i class="fa-brands fa-x-twitter"></i> X (Twitter)
+    </a>
+  </section>
+
+</main>
+
+<script src="/js/scroll.js"></script>
 </body>
 </html>
