enlaces e imagenes puestas!

--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
 
   <section class="link-section left">
     <img src="/img/toro1.png" class="toro">
-    <a href="#" class="link glass">
+    <a href="https://open.spotify.com/artist/7qYrwOgk1hQ1jtHA8bUSIs?si=HEv_B269QFOSc_5WQ_P8pQ" class="link glass">
       <i class="fa-brands fa-spotify"></i> Spotify
     </a>
   </section>
 
   <section class="link-section right">
     <img src="/img/toro2.png" class="toro">
-    <a href="#" class="link glass">
-      <i class="fa-brands fa-soundcloud"></i> SoundCloud
+    <a href="https://music.apple.com/es/artist/serat-avi/1839833524" class="link glass">
+      <i class="fa-brands fa-apple"></i> Apple Music
     </a>
   </section>
 
   <section class="link-section left">
     <img src="/img/toro3.png" class="toro">
-    <a href="#" class="link glass">
-      <i class="fa-brands fa-apple"></i> Apple Music
+    <a href="https://www.instagram.com/serat.personal.account?igsh=dGJmenVmd2dvZ20x" class="link glass">
+      <i class="fa-brands fa-instagram"></i> Instagram
     </a>
   </section>
 
   <section class="link-section right">
     <img src="/img/toro4.png" class="toro">
-    <a href="#" class="link glass">
-      <i class="fa-brands fa-youtube"></i> YouTube
+    <a href="https://www.youtube.com/channel/UCNPWeZm-7nIfhKP70-FtxlQ" class="link glass">
+      <i class="fa-brands fa-youtube "></i> YouTube
     </a>
   </section>
 
   <section class="link-section left">
     <img src="/img/toro5.png" class="toro">
-    <a href="#" class="link glass">
+    <a href="https://x.com/seratpuntoavi" class="link glass">
       <i class="fa-brands fa-x-twitter"></i> X (Twitter)
     </a>
   </section>
